k8s/monitoring/expose-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  namespace: monitoring
spec:
  selector: 
    app: prometheus
    component: core
  type: ClusterIP
  ports:
  - port: 9090
    targetPort: 9090
