k8s/monitoring/ingress-controller.yml
# based on: https://medium.com/pharos-production/how-to-deploy-grafana-prometheus-in-kubernetes-cluster-219d23e4574f
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    prometheus.io/scrape: 'true'
    prometheus.io/path: /metrics
    prometheus.io/port: '80'
spec:
  rules:
    - host: grafana.local
      http:
        paths:
          - backend:
              serviceName: grafana
              servicePort: 3000

    - host: prometheus.local
      http:
        paths:
          - backend:
              serviceName: prometheus
              servicePort: 9090
